# serieviewer

./: .gitignore  Changelog  README.md  serieviewer.pro
clojure/serieviewer/: Procfile  README.md  project.clj
clojure/serieviewer/resources/templates/: about.html  add.html  base.html  home.html
clojure/serieviewer/src/serieviewer/: core.clj  handler.clj  layout.clj  middleware.clj  serie.clj
clojure/serieviewer/src/serieviewer/routes/: home.clj
clojure/serieviewer/test/serieviewer/test/: handler.clj
cpp/: CMakeLists.txt
cpp/src/: adddialogimpl.cpp  adddialogimpl.h  defines.h  icons.qrc  infodialog.ui  infodialogimpl.h  linkdialog.ui  mwindowimpl.cpp  mwindowimpl.h  namedelegate.cpp  namedelegate.h  serie.cpp  serie.h  seriedelegate.cpp  seriedelegate.h  seriemodel.cpp  seriemodel.h  seriemodeliterator.cpp  seriemodeliterator.h  seriesortfilterproxymodel.cpp  seriesortfilterproxymodel.h  serieview.cpp  serieview.h  serieviewerdbus.cpp  serieviewerdbus.h  setplayerdialog.ui  setplayerdialogimpl.h  settings.cpp  settings.h  settingsdialog.ui  spinboxdelegate.cpp  spinboxdelegate.h  xmlhandler.cpp  xmlhandler.h
cpp/ui/: mwindow.ui
haskell/: serieviewer.cabal
haskell/src/: Bootstrap.hs  Main.hs  Pages.hs  Serie.hs  Utils.hs  XML.hs  XMLHandler.hs
src/: adddialog.ui  adddialogimpl.h  defines.cpp  defines.h  icons.qrc  infodialog.ui  infodialogimpl.h  linkdialogimpl.cpp  linkdialogimpl.h  main.cpp  mwindow.ui  mwindowimpl.cpp  mwindowimpl.h  serie.cpp  serie.h  serieviewerdbus.cpp  setplayerdialogimpl.cpp  setplayerdialogimpl.h  settings.cpp  settings.h  settingsdialog.ui  settingsdialogimpl.cpp  settingsdialogimpl.h  xmlhandler.cpp  xmlhandler.h
